# claritas

./: .gitignore  Cargo.toml  config_check.bat  plan.md
.github/workflows/: ci.yml
claritas_mcp_clarium/: Cargo.toml
claritas_mcp_clarium/src/: main.rs
claritas_mcp_python/: Cargo.toml
claritas_mcp_python/src/: main.rs
claritas_mcp_rust/: Cargo.toml
claritas_mcp_rust/src/: main.rs
claritasai-abtest/: Cargo.toml
claritasai-abtest/src/: lib.rs
claritasai-agents/: Cargo.toml
claritasai-agents/src/: lib.rs
claritasai-app/: Cargo.toml
claritasai-app/src/: main.rs
claritasai-core/: Cargo.toml
claritasai-core/src/: fs.rs  graph.rs  lib.rs  patch.rs
claritasai-lua/: Cargo.toml
claritasai-lua/src/: lib.rs
claritasai-mcp/: Cargo.toml
claritasai-mcp/src/: lib.rs
claritasai-notify/: Cargo.toml
claritasai-notify/src/: lib.rs
claritasai-plan/: Cargo.toml
claritasai-plan/src/: lib.rs
claritasai-runtime/: Cargo.toml
claritasai-runtime/src/: lib.rs  orchestrator.rs  patch_pipeline.rs  roles.rs
claritasai-verify/: Cargo.toml
claritasai-verify/src/: lib.rs
claritasai-web/: Cargo.toml
claritasai-web/src/: lib.rs
configs/: claritasai.yaml
scripts/: run_tests.ps1  start_claritas.ps1
