[package]
name = "claritasai-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
claritasai-web = { path = "../claritasai-web" }
claritasai-mcp = { path = "../claritasai-mcp" }
tokio-postgres = { workspace = true }
url = { workspace = true }
claritasai-agents = { path = "../claritasai-agents" }
claritasai-notify = { path = "../claritasai-notify" }
claritasai-runtime = { path = "../claritasai-runtime" }
