[package]
name = "claritasai-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
