[package]
name = "claritasai-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
claritasai-mcp = { path = "../claritasai-mcp" }
htmlescape = "0.3"
tokio-postgres = { workspace = true }
claritasai-plan = { path = "../claritasai-plan" }
claritasai-verify = { path = "../claritasai-verify" }
claritasai-core = { path = "../claritasai-core" }
